@@ -1,6 +1,7 @@
 Changes for 2.1.0
 
 New features:
+A.F.I..PS. [ZBXNEXT-1526] added support of configurable number of retries per WEB scenario (Alexei)
 A.F.....S. [ZBXNEXT-1286] added support of low-level discovery macros in trigger prototype expressions (Sasha)
 A.F.I..PS. [ZBXNEXT-450] added support of SHA authentication protocol and AES privacy protocol for SNMPv3 chacks (Eduard, Sasha)
 A.F.I..PS. [ZBXNEXT-308] added support of WEB monitoring using HTTP proxy (Alexei)
